[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "textfsm"
version = "1.1.1a1"
description = "Enable support with Poetry to read version"
authors = ["Kirk Byers <ktbyers@twb-tech.com>"]
readme = "README.md"
repository = "https://github.com/ktbyers/textfsm"
classifiers = [
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
